[package]
name = "stof-http"
version = "0.1.0"
edition = "2021"
authors = ["CJ Cummings <cj@formata.io>"]
description = "Stof is a unified data interface and interchange format for creating, sharing, and manipulating data. Stof removes the fragile and cumbersome parts of combining and using data in applications."
license = "Apache-2.0"
repository = "https://github.com/dev-formata-io/stof-http"
homepage = "https://docs.stof.dev"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
stof = "0.1.9"
ureq = "2.12.1"
